# items3b

items-3b/: Dockerfile  README.md  pyproject.toml
items-3b/items_3b/app/: main.py
items-3b/items_3b/app/models/: models.py
items-3b/items_3b/app/routers/: inventories_router.py  products_router.py
items-3b/items_3b/app/schemas/: inventories_schema.py  orders_schema.py  products_schema.py
items-3b/items_3b/app/services/: inventories_services.py  products_services.py
items-3b/items_3b/settings/: config.py
items-3b/items_3b/tests/: test_main.py
